Fixes for adjust-spacing-only after merging tidy-scss

--- a/client/src/styles/partials/bdsettings/button.scss
+++ b/client/src/styles/partials/bdsettings/button.scss
@@ -41,8 +41,13 @@
             width: 130px;
             height: 80px;
             background-size: 100% 100%;
-            margin-left: 20px;
+            margin-left: 25px;
             cursor: default;
         }
+    }
+
+    .platform-darwin & {
+        top: 26px;
+        padding-bottom: 2px;
     }
 }
