--- a/client/src/styles/partials/bdsettings/plugins.scss
+++ b/client/src/styles/partials/bdsettings/plugins.scss
@@ -11,10 +11,7 @@
             user-select: none;
             display: block;
             font-size: 1.17em;
-            margin-top: 1em;
-            margin-bottom: 1em;
-            margin-left: 0;
-            margin-right: 0;
+            margin: 10px 10px 10px 40px;
             font-weight: bold;
             flex-grow: 1;
         }
