--- a/client/src/styles/partials/generic/forms.scss
+++ b/client/src/styles/partials/generic/forms.scss
@@ -7,8 +7,8 @@
 
 .bd-form-divider {
     height: 1px;
-    margin-top: 8px;
-    margin-bottom: 40px;
+    margin-top: 20px;
+    margin-bottom: 30px;
     background: hsla(218,5%,47%,.3);
 }
 
