--- a/client/src/styles/partials/sidebarview/content.scss
+++ b/client/src/styles/partials/sidebarview/content.scss
@@ -25,9 +25,9 @@
             color: $colbdblue;
             text-transform: uppercase;
             font-weight: 600;
-            margin-top: 10px;
-            margin-bottom: 20px;
-            font-size: 100%;
+            margin-top: 26px;
+            margin-bottom: 17px;
+            font-size: 17px;
             outline: 0;
             padding: 0;
             vertical-align: baseline;
@@ -51,6 +51,6 @@
     }
 
     .bd-settingsWrap {
-        padding: 20px 15px 15px 15px;
+        padding: 20px 30px 15px;
     }
 }
